--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Welcome to My Website</h1>
+        <p>This is a basic header</p>
+    </header>
 </body>
 </html>
