--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>Welcome to My Website</h1>
         <p>This is a basic header</p>
     </header>    
+    <p>Change made</p>
     <footer>
         <p>&copy; 2025 My Website</p>
     </footer>
